--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "name": "Sync test",
             "program": "${workspaceFolder}/main.py",
@@ -14,7 +14,7 @@
         },
 
         {
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "name": "Ninja test",
             "program": "${workspaceFolder}/main.py",
@@ -23,7 +23,7 @@
         },
 
         {
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "name": "List phantom test",
             "program": "${workspaceFolder}/main.py",
@@ -32,7 +32,7 @@
         },
 
         {
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "name": "Sudo test",
             "program": "${workspaceFolder}/main.py",
@@ -40,7 +40,7 @@
             "args": ["-m", "v03", "sudo", "whoami"]
         },
         {
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "name": "Kill phantom test",
             "program": "${workspaceFolder}/main.py",
@@ -49,7 +49,7 @@
         },
 
         {
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "name": "Wandb cleanup",
             "program": "${workspaceFolder}/main.py",
@@ -58,11 +58,20 @@
         },
 
         {
-            "type": "python",
+            "type": "debugpy",
+            "request": "launch",
+            "name": "Cluster indirect run",
+            "program": "${workspaceFolder}/main.py",
+            "cwd": "/nlp/scr/rcsordas/rnn_generalization_test",
+            "args": ["-s", "-m", "sc", "-gt", "a6000", "wandb", "resume", "idsia/moe_universal/qw4lr8sb", "-d", "-f"]
+        },
+
+        {
+            "type": "debugpy",
             "request": "launch",
             "name": "Wandb resume on cluster",
             "program": "${workspaceFolder}/main.py",
-            "cwd": "/home/robert/rnn_generalization_test",
+            "cwd": "~/rnn_generalization_test",
             "args": [ "-s", "-m", "daint", "wandb", "agent", "asdf",  "-mgpu", "32", "-t", "23:59:00"]
         },
     ]
